Started work on age demographics

--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -315,7 +315,7 @@
        "0                     179           3.05                  780        2379.77"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -417,15 +417,15 @@
        "Other / Non-Disclosed            11                       2.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchase_data[['Gender','SN']]\n",
+    "gender_data = purchase_data[['Gender','SN']]\n",
     "\n",
-    "gender_group = purchase_data.groupby(['Gender'])\n",
+    "gender_group = gender_data.groupby(['Gender'])\n",
     "gender_count = gender_group['SN'].nunique()\n",
     "gender_count = pd.DataFrame(gender_count)\n",
     "gender_count.columns = ['Player Count']\n",
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Other / Non-Disclosed                 50.19                            4.56  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,10 +590,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>&lt;10</td>\n",
+       "      <td>Purchase ID             SN  Age  Gender  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10-14</td>\n",
+       "      <td>Purchase ID             SN  Age  Gender  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15-19</td>\n",
+       "      <td>Purchase ID             SN  Age Gender  I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20-24</td>\n",
+       "      <td>Purchase ID             SN  Age  Gender  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25-29</td>\n",
+       "      <td>Purchase ID            SN  Age  Gender  I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>30-34</td>\n",
+       "      <td>Purchase ID            SN  Age  Gender  I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>35-39</td>\n",
+       "      <td>Purchase ID              SN  Age         ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>40-44</td>\n",
+       "      <td>Purchase ID            SN  Age  Gender  I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>45-49</td>\n",
+       "      <td>Purchase ID       SN  Age Gender  Item ID...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0                                                  1\n",
+       "0    <10       Purchase ID             SN  Age  Gender  ...\n",
+       "1  10-14       Purchase ID             SN  Age  Gender  ...\n",
+       "2  15-19       Purchase ID             SN  Age Gender  I...\n",
+       "3  20-24       Purchase ID             SN  Age  Gender  ...\n",
+       "4  25-29       Purchase ID            SN  Age  Gender  I...\n",
+       "5  30-34       Purchase ID            SN  Age  Gender  I...\n",
+       "6  35-39       Purchase ID              SN  Age         ...\n",
+       "7  40-44       Purchase ID            SN  Age  Gender  I...\n",
+       "8  45-49       Purchase ID       SN  Age Gender  Item ID..."
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 44, 49]\n",
+    "group_names = ['<10', '10-14', '15-19', '20-24','25-29', '30-34', '35-39','40-44','45-49']\n",
+    "\n",
+    "age_data = purchase_data.copy()\n",
+    "age_data['Age Group'] = pd.cut(age_data['Age'], bins, labels = group_names, include_lowest=True)\n",
+    "age_group = age_data.groupby(['Age Group'])\n",
+    "age_group = pd.DataFrame(age_group)\n",
+    "# age_group = age_group['Purchase ID'].nunique()\n",
+    "age_group"
+   ]
   },
   {
    "cell_type": "markdown",
