Age demographics completed

--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -315,7 +315,7 @@
        "0                     179           3.05                  780        2379.77"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "Other / Non-Disclosed            11                       2.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Other / Non-Disclosed                 50.19                            4.56  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {
     "scrolled": false
    },
@@ -616,74 +616,114 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Avg. Purchase Price</th>\n",
+       "      <th>Total Purchase Price</th>\n",
+       "      <th>Avg Pur. Total Per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>&lt;10</td>\n",
-       "      <td>Purchase ID             SN  Age  Gender  ...</td>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>77.13</td>\n",
+       "      <td>3.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10-14</td>\n",
-       "      <td>Purchase ID             SN  Age  Gender  ...</td>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>82.78</td>\n",
+       "      <td>2.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15-19</td>\n",
-       "      <td>Purchase ID             SN  Age Gender  I...</td>\n",
+       "      <th>15-19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>412.89</td>\n",
+       "      <td>3.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20-24</td>\n",
-       "      <td>Purchase ID             SN  Age  Gender  ...</td>\n",
+       "      <th>20-24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>1114.06</td>\n",
+       "      <td>3.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25-29</td>\n",
-       "      <td>Purchase ID            SN  Age  Gender  I...</td>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>293.00</td>\n",
+       "      <td>2.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>30-34</td>\n",
-       "      <td>Purchase ID            SN  Age  Gender  I...</td>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>214.00</td>\n",
+       "      <td>2.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>35-39</td>\n",
-       "      <td>Purchase ID              SN  Age         ...</td>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>147.67</td>\n",
+       "      <td>3.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>40-44</td>\n",
-       "      <td>Purchase ID            SN  Age  Gender  I...</td>\n",
+       "      <th>40-44</th>\n",
+       "      <td>12</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>36.54</td>\n",
+       "      <td>3.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>45-49</td>\n",
-       "      <td>Purchase ID       SN  Age Gender  Item ID...</td>\n",
+       "      <th>45-49</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>1.70</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       0                                                  1\n",
-       "0    <10       Purchase ID             SN  Age  Gender  ...\n",
-       "1  10-14       Purchase ID             SN  Age  Gender  ...\n",
-       "2  15-19       Purchase ID             SN  Age Gender  I...\n",
-       "3  20-24       Purchase ID             SN  Age  Gender  ...\n",
-       "4  25-29       Purchase ID            SN  Age  Gender  I...\n",
-       "5  30-34       Purchase ID            SN  Age  Gender  I...\n",
-       "6  35-39       Purchase ID              SN  Age         ...\n",
-       "7  40-44       Purchase ID            SN  Age  Gender  I...\n",
-       "8  45-49       Purchase ID       SN  Age Gender  Item ID..."
+       "           Purchase Count  Avg. Purchase Price  Total Purchase Price  \\\n",
+       "Age Group                                                              \n",
+       "<10                    23                 3.35                 77.13   \n",
+       "10-14                  28                 2.96                 82.78   \n",
+       "15-19                 136                 3.04                412.89   \n",
+       "20-24                 365                 3.05               1114.06   \n",
+       "25-29                 101                 2.90                293.00   \n",
+       "30-34                  73                 2.93                214.00   \n",
+       "35-39                  41                 3.60                147.67   \n",
+       "40-44                  12                 3.04                 36.54   \n",
+       "45-49                   1                 1.70                  1.70   \n",
+       "\n",
+       "           Avg Pur. Total Per Person  \n",
+       "Age Group                             \n",
+       "<10                             3.35  \n",
+       "10-14                           2.96  \n",
+       "15-19                           3.04  \n",
+       "20-24                           3.05  \n",
+       "25-29                           2.90  \n",
+       "30-34                           2.93  \n",
+       "35-39                           3.60  \n",
+       "40-44                           3.04  \n",
+       "45-49                           1.70  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,12 +732,19 @@
     "bins = [0, 9, 14, 19, 24, 29, 34, 39, 44, 49]\n",
     "group_names = ['<10', '10-14', '15-19', '20-24','25-29', '30-34', '35-39','40-44','45-49']\n",
     "\n",
-    "age_data = purchase_data.copy()\n",
+    "age_data = purchase_data[['Age','Purchase ID','SN','Price']].copy()\n",
     "age_data['Age Group'] = pd.cut(age_data['Age'], bins, labels = group_names, include_lowest=True)\n",
     "age_group = age_data.groupby(['Age Group'])\n",
-    "age_group = pd.DataFrame(age_group)\n",
-    "# age_group = age_group['Purchase ID'].nunique()\n",
-    "age_group"
+    "age_npurch = age_group['Purchase ID'].count()\n",
+    "age_totalprice = age_group['Price'].sum()\n",
+    "age_avgprice = round(age_group['Price'].mean(),2)\n",
+    "age_avgperperson = round(age_group['Price'].sum()/age_group['SN'].count(), 2)\n",
+    "age_merge = {'Purchase Count':age_npurch,\n",
+    "            'Avg. Purchase Price': age_avgprice,\n",
+    "            'Total Purchase Price': age_totalprice,\n",
+    "            'Avg Pur. Total Per Person': age_avgperperson}\n",
+    "age_merge = pd.DataFrame(age_merge)\n",
+    "age_merge"
    ]
   },
   {
