Completed Purchasing Analysis by Age and identified top spenders

--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -315,7 +315,7 @@
        "0                     179           3.05                  780        2379.77"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "Other / Non-Disclosed            11                       2.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Other / Non-Disclosed                 50.19                            4.56  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,10 +590,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player Count</th>\n",
+       "      <th>Percent of Total Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>3.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>107</td>\n",
+       "      <td>18.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>44.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>77</td>\n",
+       "      <td>13.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>31</td>\n",
+       "      <td>5.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40-44</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45-49</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Player Count  Percent of Total Players\n",
+       "Age Group                                        \n",
+       "<10                  17                       3.0\n",
+       "10-14                22                       3.8\n",
+       "15-19               107                      18.6\n",
+       "20-24               258                      44.8\n",
+       "25-29                77                      13.4\n",
+       "30-34                52                       9.0\n",
+       "35-39                31                       5.4\n",
+       "40-44                11                       1.9\n",
+       "45-49                 1                       0.2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 44, 49]\n",
+    "group_names = ['<10', '10-14', '15-19', '20-24','25-29', '30-34', '35-39','40-44','45-49']\n",
+    "\n",
+    "age_data = purchase_data[['Age','Purchase ID','SN','Price']].copy()\n",
+    "age_data['Age Group'] = pd.cut(age_data['Age'], bins, labels = group_names, include_lowest=True)\n",
+    "age_group = age_data.groupby(['Age Group'])\n",
+    "age_count = age_group['SN'].nunique()\n",
+    "age_count_df = {'Player Count':age_count}\n",
+    "age_count_df = pd.DataFrame(age_count_df)\n",
+    "age_count_df['Percent of Total Players'] = round(age_count_df['Player Count']/TotalPlayers * 100, 1)\n",
+    "\n",
+    "age_count_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Purchasing Analysis (Age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Bin the purchase_data data frame by age\n",
+    "\n",
+    "\n",
+    "* Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. in the table below\n",
+    "\n",
+    "\n",
+    "* Create a summary data frame to hold the results\n",
+    "\n",
+    "\n",
+    "* Optional: give the displayed data cleaner formatting\n",
+    "\n",
+    "\n",
+    "* Display the summary data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -723,22 +866,16 @@
        "45-49                           1.70  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 44, 49]\n",
-    "group_names = ['<10', '10-14', '15-19', '20-24','25-29', '30-34', '35-39','40-44','45-49']\n",
-    "\n",
-    "age_data = purchase_data[['Age','Purchase ID','SN','Price']].copy()\n",
-    "age_data['Age Group'] = pd.cut(age_data['Age'], bins, labels = group_names, include_lowest=True)\n",
-    "age_group = age_data.groupby(['Age Group'])\n",
     "age_npurch = age_group['Purchase ID'].count()\n",
+    "age_avgprice = round(age_group['Price'].mean(), 2)\n",
     "age_totalprice = age_group['Price'].sum()\n",
-    "age_avgprice = round(age_group['Price'].mean(),2)\n",
-    "age_avgperperson = round(age_group['Price'].sum()/age_group['SN'].count(), 2)\n",
+    "age_avgperperson = round(age_totalprice/age_npurch, 2)\n",
     "age_merge = {'Purchase Count':age_npurch,\n",
     "            'Avg. Purchase Price': age_avgprice,\n",
     "            'Total Purchase Price': age_totalprice,\n",
@@ -746,39 +883,6 @@
     "age_merge = pd.DataFrame(age_merge)\n",
     "age_merge"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Purchasing Analysis (Age)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Bin the purchase_data data frame by age\n",
-    "\n",
-    "\n",
-    "* Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. in the table below\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -809,10 +913,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Avg. Purchase Price</th>\n",
+       "      <th>Total Purchase Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.37</td>\n",
+       "      <td>13.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count  Avg. Purchase Price  Total Purchase Price\n",
+       "SN                                                                    \n",
+       "Lisosia93                 5                 3.79                 18.96\n",
+       "Idastidru52               4                 3.86                 15.45\n",
+       "Chamjask73                3                 4.61                 13.83\n",
+       "Iral74                    4                 3.40                 13.62\n",
+       "Iskadarya95               3                 4.37                 13.10"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topspend_data = purchase_data[['SN','Purchase ID','Price']]\n",
+    "topspend_group = topspend_data.groupby(['SN'])\n",
+    "topspend_npurch = topspend_group['Purchase ID'].count()\n",
+    "topspend_avgprice = round(topspend_group['Price'].mean(), 2)\n",
+    "topspend_totalprice = round(topspend_group['Price'].sum(), 2)\n",
+    "topspend_merge = {'Purchase Count':topspend_npurch,\n",
+    "                'Avg. Purchase Price': topspend_avgprice,\n",
+    "                'Total Purchase Price': topspend_totalprice}\n",
+    "topspend_merge = pd.DataFrame(topspend_merge)\n",
+    "topspend_merge = topspend_merge.sort_values('Total Purchase Price', ascending=False)\n",
+    "topspend_merge.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -927,5 +1125,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
